# python-mcp-bigquery

./: .dockerignore  .env.sample  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  azure-container-instance.json  azure.yaml  docker-compose.yml  docker-entrypoint.sh  openapi.yaml  preprovision.ps1  preprovision.sh  pyproject.toml  requirements.txt  setup-credentials.ps1
hooks/: postdeploy.ps1  postdeploy.sh  preprovision.ps1  preprovision.sh
infra/: main.bicep  main.parameters.json
src/mcp_bigquery_server/: __init__.py  http_server.py  main.py
