[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bigquery-server"
version = "0.1.0"
description = "A Model Context Protocol server for BigQuery integration"
authors = [
    {name = "MCP BigQuery Team"}
]
dependencies = [
    "mcp>=1.0.0",
    "google-cloud-bigquery>=3.35.0",
    "anyio>=3.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.5",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.scripts]
mcp-bigquery = "mcp_bigquery_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]
